tests/error/tracing_errors/not_callable1.py
from guppylang.decorator import guppy


@guppy.comptime
def test(x: float) -> None:
    x(1)


test.compile()
